force-app/main/default/objects/Lead/fields/Hygiene_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Notes__c</fullName>
    <label>Hygiene Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>