force-app/main/default/objects/Lead/fields/Hygiene_Score__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Score__c</fullName>
    <label>Hygiene Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>