force-app/main/default/objects/Lead/fields/Hygiene_Status__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Status__c</fullName>
    <label>Hygiene Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>Cleaned</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>